--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
