--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "antd": "^5.24.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-datepicker": "^8.0.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5"
